# PadTriggerPatternsML

./: .gitignore  Makefile  README.md  pyproject.toml
data/: LS_pack_new_phis.txt  STGCPadTrigger.np.A05.txt  pads.txt
pads_ml/: constants.py  generator.py  highest_score.py  inference.py  lines.py  model.py  preprocess.py  train.py  traverser.py  utils.py
pads_ml/pads_ml/: lines.py  preprocess.py
scripts/: check_smearing.py  combine_arrays.py  convert_atlas_vhd_to_numpy.py  convert_from_atlas.py  convert_pads_to_one_hot.py  count_unique_patterns.py  do_inference.py  draw_efficiency.py  draw_high_score_signal.py  draw_intersecting_pads.py  draw_sector.py  draw_signal.py  generate.py  train_network.py
src/pads_ml/: constants.py  generator.py  lines.py  model.py  padpolygons.py  pads.py  preprocess.py  train.py  traverser.py
