[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pads_ml"
version = "0.1.0"
description = "A repository for studying pad trigger patterns with machine learning"
authors = [
    {name = "Alexander Tuna", email = "alexander.tuna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy<2",
    "pandas>=2"
]

[project.urls]
"Homepage" = "https://github.com/alexandertuna/PadTriggerPatternsML"

[tool.setuptools.packages.find]
where = ["pads_ml"]

