[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pads_ml"
version = "0.1.0"
description = "A repository for studying pad trigger patterns with machine learning"
authors = [
    {name = "Alexander Tuna", email = "alexander.tuna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy<2",
    "pandas>=2"
]

